# test_renovate_cargo_yank

./: Cargo.toml  renovate.json
